@@ -10,16 +10,17 @@ import static no.sikt.clients.AbstractHttpUrlConnectionApi.LOG_MESSAGE_COMMUNICA
 import static no.sikt.commons.HandlerUtils.COULD_NOT_FETCH_BASEBIBLIOTEK_REPORT_MESSAGE;
 import static no.sikt.commons.HandlerUtils.HYPHEN;
 import static no.sikt.lum.UserConverter.LIB_USER_PREFIX;
+import static no.sikt.lum.UserConverter.USER_IDENTIFIER_REALMS;
 import static no.unit.nva.testutils.RandomDataGenerator.randomBoolean;
 import static no.unit.nva.testutils.RandomDataGenerator.randomString;
 import static nva.commons.core.StringUtils.EMPTY_STRING;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.endsWith;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.notNullValue;
-import static org.hamcrest.Matchers.startsWith;
 import static org.hamcrest.core.StringContains.containsString;
+import static org.hamcrest.core.StringStartsWith.startsWith;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
@@ -50,9 +51,9 @@ import no.sikt.alma.user.generated.Phones;
 import no.sikt.alma.user.generated.User;
 import no.sikt.clients.alma.HttpUrlConnectionAlmaUserUpserter;
 import no.sikt.clients.basebibliotek.BaseBibliotekUtils;
+import no.sikt.clients.basebibliotek.HttpUrlConnectionBaseBibliotekApi;
 import no.sikt.commons.HandlerUtils;
-import no.sikt.rsp.AlmaCodeProvider;
-import no.sikt.rsp.LibCodeToAlmaCodeEntry;
+import no.sikt.lum.secret.AlmaKeysFetcher;
 import no.unit.nva.s3.S3Driver;
 import no.unit.nva.stubs.FakeS3Client;
 import nva.commons.core.Environment;
@@ -60,11 +61,10 @@ import nva.commons.core.ioutils.IoUtils;
 import nva.commons.core.paths.UnixPath;
 import nva.commons.core.paths.UriWrapper;
 import nva.commons.logutils.LogUtils;
-import nva.commons.logutils.TestAppender;
+import nva.commons.secrets.ErrorReadingSecretException;
 import org.apache.commons.lang3.StringUtils;
 import org.hamcrest.collection.IsCollectionWithSize;
 import org.hamcrest.core.IsNull;
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import software.amazon.awssdk.services.secretsmanager.SecretsManagerClient;
@@ -77,53 +77,46 @@ import test.utils.RecordBuilder;
 import test.utils.RecordSpecification;
 import test.utils.WireMocker;
 
-@SuppressWarnings({"PMD.DataflowAnomalyAnalysis", "PMD.AvoidDuplicateLiterals"})
 @WireMockTest
 class LibraryUserManagementHandlerTest {
 
     public static final String BIBLIOTEK_REST_PATH = "/basebibliotek/rest/bibnr/";
     public static final String BASEBIBLIOTEK_REPORT = "basebibliotek-report";
     public static final String FULL_ALMA_CODE_ALMA_APIKEY_MAPPING_JSON = "fullAlmaCodeAlmaApiKeyMapping.json";
-    public static final String FULL_LIB_CODE_TO_ALMA_CODE_MAPPING_JSON = "fullLibCodeToAlmaCodeMapping.json";
     public static final String INST = "Inst";
     public static final Context CONTEXT = mock(Context.class);
     public static final String BIBLTYPE = "Bibltype";
-    private static final String SHARED_CONFIG_BUCKET_NAME_ENV_VALUE = "SharedConfigBucket";
-    private static final String LIB_CODE_TO_ALMA_CODE_MAPPING_FILE_PATH = "/libCodeToAlmaCodeMapping.json";
     private static final String BIBNR_RESOLVABLE_TO_ALMA_CODE = "0030100";
     private static final String BASEBIBLIOTEK_0030100_XML = "bb_0030100.xml";
+    private static final String BASEBIBLIOTEK_2062200_XML = "bb_2062200.xml";
     private static final String LIB_0030100_ID = "lib0030100";
+    private static final String LIB_2062200_ID = "lib2062200";
     private static final String INVALID_BASEBIBLIOTEK_XML_STRING = "invalid";
     private static final String EMAIL_ADR = "adr@example.com";
     private static final String EMAIL_BEST = "best@example.com";
+    private static final String BUCKET_NAME = "bucket";
+
     private static final Environment mockedEnvironment = mock(Environment.class);
     private transient FakeS3Client s3Client;
     private transient S3Driver s3Driver;
     private transient LibraryUserManagementHandler libraryUserManagementHandler;
     private transient int numberOfAlmaInstances;
-
-    private transient SecretsManagerClient secretsManagerClient;
-    private transient GetSecretValueResponse getSecretValueResponse;
+    private transient AlmaKeysFetcher almaKeysFetcher;
 
     @BeforeEach
-    public void init(final WireMockRuntimeInfo wmRuntimeInfo) throws IOException {
+    public void init(final WireMockRuntimeInfo wmRuntimeInfo) {
         s3Client = new FakeS3Client();
-        s3Driver = new S3Driver(s3Client, SHARED_CONFIG_BUCKET_NAME_ENV_VALUE);
-        secretsManagerClient = mock(SecretsManagerClient.class);
-        getSecretValueResponse = mock(GetSecretValueResponse.class);
+        s3Driver = new S3Driver(s3Client, BUCKET_NAME);
+        var secretsManagerClient = mock(SecretsManagerClient.class);
+        almaKeysFetcher = new AlmaKeysFetcher(secretsManagerClient);
+        var getSecretValueResponse = mock(GetSecretValueResponse.class);
 
         when(mockedEnvironment.readEnv(LibraryUserManagementHandler.ALMA_API_HOST)).thenReturn(
             UriWrapper.fromUri(wmRuntimeInfo.getHttpBaseUrl()).toString());
         when(mockedEnvironment.readEnv(LibraryUserManagementHandler.BASEBIBLIOTEK_URI_ENVIRONMENT_NAME)).thenReturn(
             UriWrapper.fromUri(wmRuntimeInfo.getHttpBaseUrl()).addChild(BIBLIOTEK_REST_PATH).toString());
-        when(mockedEnvironment.readEnv(LibraryUserManagementHandler.SHARED_CONFIG_BUCKET_NAME_ENV_NAME)).thenReturn(
-            SHARED_CONFIG_BUCKET_NAME_ENV_VALUE);
         when(mockedEnvironment.readEnv(LibraryUserManagementHandler.REPORT_BUCKET_ENVIRONMENT_NAME)).thenReturn(
             BASEBIBLIOTEK_REPORT);
-        when(mockedEnvironment.readEnv(LibraryUserManagementHandler.LIB_CODE_TO_ALMA_CODE_MAPPING_FILE_PATH_ENV_KEY))
-            .thenReturn(LIB_CODE_TO_ALMA_CODE_MAPPING_FILE_PATH);
-        final String fullLibCodeToAlmaCodeMapping = IoUtils.stringFromResources(
-            Path.of(FULL_LIB_CODE_TO_ALMA_CODE_MAPPING_JSON));
         final String fullAlmaCodeAlmaApiKeyMapping = IoUtils.stringFromResources(
             Path.of(FULL_ALMA_CODE_ALMA_APIKEY_MAPPING_JSON));
         when(getSecretValueResponse.secretString())
@@ -131,13 +124,9 @@ class LibraryUserManagementHandlerTest {
         when(secretsManagerClient.getSecretValue(any(GetSecretValueRequest.class)))
             .thenReturn(getSecretValueResponse);
         numberOfAlmaInstances = StringUtils.countMatches(fullAlmaCodeAlmaApiKeyMapping, "almaCode");
-        s3Driver.insertFile(UnixPath.of(LIB_CODE_TO_ALMA_CODE_MAPPING_FILE_PATH), fullLibCodeToAlmaCodeMapping);
-        libraryUserManagementHandler = new LibraryUserManagementHandler(s3Client, mockedEnvironment,
-                                                                        secretsManagerClient);
-    }
-
-    @AfterEach
-    public void tearDown() {
+        libraryUserManagementHandler = new LibraryUserManagementHandler(s3Client,
+                                                                        mockedEnvironment,
+                                                                        almaKeysFetcher);
     }
 
     @Test
@@ -175,9 +164,10 @@ class LibraryUserManagementHandlerTest {
         var s3Event = HandlerTestUtils.createS3Event(randomString());
         var expectedMessage = randomString();
         s3Client = new FakeS3ClientThrowingException(expectedMessage);
-        libraryUserManagementHandler = new LibraryUserManagementHandler(s3Client, mockedEnvironment,
-                                                                        secretsManagerClient);
-        var appender = LogUtils.getTestingAppenderForRootLogger();
+        libraryUserManagementHandler = new LibraryUserManagementHandler(s3Client,
+                                                                        mockedEnvironment,
+                                                                        almaKeysFetcher);
+        var appender = LogUtils.getTestingAppender(LibraryUserManagementHandler.class);
         assertThrows(RuntimeException.class, () -> libraryUserManagementHandler.handleRequest(s3Event, CONTEXT));
         assertThat(appender.getMessages(), containsString(expectedMessage));
     }
@@ -221,7 +211,7 @@ class LibraryUserManagementHandlerTest {
         libraryUserManagementHandler.handleRequest(s3Event, CONTEXT);
         var users = libraryUserManagementHandler.getUsers();
         Entry<String, List<User>> entry = users.entrySet().iterator().next();
-        assertContactInfo(entry.getValue().get(0).getContactInfo(), basebibliotek.getRecord().get(0));
+        assertContactInfo(entry.getValue().getFirst().getContactInfo(), basebibliotek.getRecord().getFirst());
     }
 
     @Test
@@ -247,72 +237,15 @@ class LibraryUserManagementHandlerTest {
     }
 
     @Test
-    public void shouldLogAndThrowExceptionWhenAlmaCodeLookupTableIsMissing() throws IOException {
-        final Record record = new RecordBuilder(BigInteger.ONE, LocalDate.now(), BaseBibliotekUtils.KATSYST_ALMA)
-                                  .withBibnr(BIBNR_RESOLVABLE_TO_ALMA_CODE)
-                                  .withLandkode(BaseBibliotekUtils.COUNTRY_CODE_NORWEGIAN)
-                                  .build();
-        s3Client = new FakeS3Client();
-        s3Driver = new S3Driver(s3Client, SHARED_CONFIG_BUCKET_NAME_ENV_VALUE);
-        final S3Event s3Event = prepareBaseBibliotekFromRecords(record);
-        libraryUserManagementHandler = new LibraryUserManagementHandler(s3Client, mockedEnvironment,
-                                                                        secretsManagerClient);
-        final TestAppender appender = LogUtils.getTestingAppenderForRootLogger();
-        assertThrows(RuntimeException.class, () -> libraryUserManagementHandler.handleRequest(s3Event, CONTEXT));
-        assertThat(appender.getMessages(), containsString(LIB_CODE_TO_ALMA_CODE_MAPPING_FILE_PATH));
-    }
-
-    @Test
-    public void shouldLogAndThrowExceptionWhenAlmaCodeLookupTableIsEmpty() throws IOException {
-        final Record record = new RecordBuilder(BigInteger.ONE, LocalDate.now(), BaseBibliotekUtils.KATSYST_ALMA)
-                                  .withBibnr(BIBNR_RESOLVABLE_TO_ALMA_CODE)
-                                  .withLandkode(BaseBibliotekUtils.COUNTRY_CODE_NORWEGIAN)
-                                  .build();
-        s3Client = new FakeS3Client();
-        s3Driver = new S3Driver(s3Client, SHARED_CONFIG_BUCKET_NAME_ENV_VALUE);
-        final S3Event s3Event = prepareBaseBibliotekFromRecords(record);
-        when(mockedEnvironment.readEnv(
-            LibraryUserManagementHandler.LIB_CODE_TO_ALMA_CODE_MAPPING_FILE_PATH_ENV_KEY)).thenReturn(
-            LIB_CODE_TO_ALMA_CODE_MAPPING_FILE_PATH);
-        s3Driver.insertFile(UnixPath.of(LIB_CODE_TO_ALMA_CODE_MAPPING_FILE_PATH),
-                            IoUtils.stringFromResources(Path.of("emptyLibCodeToAlmaCodeMapping.json")));
-        libraryUserManagementHandler = new LibraryUserManagementHandler(s3Client, mockedEnvironment,
-                                                                        secretsManagerClient);
-        final TestAppender appender = LogUtils.getTestingAppenderForRootLogger();
-        assertThrows(RuntimeException.class, () -> libraryUserManagementHandler.handleRequest(s3Event, CONTEXT));
-        assertThat(appender.getMessages(), containsString(AlmaCodeProvider.EMPTY_MAPPING_TABLE_MESSAGE));
-    }
-
-    @Test
-    public void shouldLogAndThrowExceptionWhenAlmaCodeLookupTableIsInvalidJson() throws IOException {
-        final Record record = new RecordBuilder(BigInteger.ONE, LocalDate.now(), BaseBibliotekUtils.KATSYST_ALMA)
-                                  .withBibnr(BIBNR_RESOLVABLE_TO_ALMA_CODE)
-                                  .withLandkode(BaseBibliotekUtils.COUNTRY_CODE_NORWEGIAN)
-                                  .build();
-        s3Client = new FakeS3Client();
-        s3Driver = new S3Driver(s3Client, SHARED_CONFIG_BUCKET_NAME_ENV_VALUE);
-        final S3Event s3Event = prepareBaseBibliotekFromRecords(record);
-        when(mockedEnvironment.readEnv(
-            LibraryUserManagementHandler.LIB_CODE_TO_ALMA_CODE_MAPPING_FILE_PATH_ENV_KEY)).thenReturn(
-            LIB_CODE_TO_ALMA_CODE_MAPPING_FILE_PATH);
-        s3Driver.insertFile(UnixPath.of(LIB_CODE_TO_ALMA_CODE_MAPPING_FILE_PATH),
-                            IoUtils.stringFromResources(Path.of("invalidLibCodeToAlmaCodeMapping.json")));
-        libraryUserManagementHandler = new LibraryUserManagementHandler(s3Client, mockedEnvironment,
-                                                                        secretsManagerClient);
-        final TestAppender appender = LogUtils.getTestingAppenderForRootLogger();
-        assertThrows(RuntimeException.class, () -> libraryUserManagementHandler.handleRequest(s3Event, CONTEXT));
-        assertThat(appender.getMessages(), containsString(LibCodeToAlmaCodeEntry.FIELD_IS_NULL_OR_EMPTY_MESSAGE));
-    }
-
-    @Test
     public void shouldIgnoreUserAndLogProblemIfBaseBibliotekIsNotAvailable() throws IOException {
         var uri = s3Driver.insertFile(HandlerTestUtils.randomS3Path(), BIBNR_RESOLVABLE_TO_ALMA_CODE);
         var s3Event = HandlerTestUtils.createS3Event(uri);
         when(mockedEnvironment.readEnv(LibraryUserManagementHandler.BASEBIBLIOTEK_URI_ENVIRONMENT_NAME)).thenReturn(
             UriWrapper.fromUri("http://localhost:9999").toString());
-        libraryUserManagementHandler = new LibraryUserManagementHandler(s3Client, mockedEnvironment,
-                                                                        secretsManagerClient);
-        final TestAppender appender = LogUtils.getTestingAppenderForRootLogger();
+        libraryUserManagementHandler = new LibraryUserManagementHandler(s3Client,
+                                                                        mockedEnvironment,
+                                                                        almaKeysFetcher);
+        final var appender = LogUtils.getTestingAppender(HttpUrlConnectionBaseBibliotekApi.class);
         final Integer count = libraryUserManagementHandler.handleRequest(s3Event, CONTEXT);
         assertThat(count, is(0));
         assertThat(appender.getMessages(), containsString(LOG_MESSAGE_COMMUNICATION_PROBLEM));
@@ -329,7 +262,7 @@ class LibraryUserManagementHandlerTest {
                                   .build();
         var s3Event = prepareBaseBibliotekFromRecords(record);
         WireMocker.mockAlmaGetResponseBadRequestNotUserNotFound(LIB_0030100_ID);
-        final TestAppender appender = LogUtils.getTestingAppenderForRootLogger();
+        final var appender = LogUtils.getTestingAppender(HttpUrlConnectionAlmaUserUpserter.class);
         final Integer count = libraryUserManagementHandler.handleRequest(s3Event, CONTEXT);
         assertThat(count, is(0));
         assertThat(appender.getMessages(),
@@ -349,7 +282,7 @@ class LibraryUserManagementHandlerTest {
         var s3Event = prepareBaseBibliotekFromRecords(record);
         WireMocker.mockAlmaGetResponseUserNotFound(LIB_0030100_ID);
         WireMocker.mockAlmaPostResponseBadRequest();
-        final TestAppender appender = LogUtils.getTestingAppenderForRootLogger();
+        final var appender = LogUtils.getTestingAppender(HttpUrlConnectionAlmaUserUpserter.class);
         final Integer count = libraryUserManagementHandler.handleRequest(s3Event, CONTEXT);
         assertThat(count, is(0));
         assertThat(appender.getMessages(),
@@ -366,16 +299,44 @@ class LibraryUserManagementHandlerTest {
                                   .withInst(INST)
                                   .withBiblType("FBI")
                                   .build();
-        var
-            s3Event = prepareBaseBibliotekFromRecords(record);
+        var s3Event = prepareBaseBibliotekFromRecords(record);
         WireMocker.mockAlmaGetResponse(LIB_0030100_ID);
         WireMocker.mockAlmaPutResponseBadRequest(LIB_0030100_ID);
-        final TestAppender appender =
-            LogUtils.getTestingAppenderForRootLogger();
+        final var appender = LogUtils.getTestingAppender(HttpUrlConnectionAlmaUserUpserter.class);
         final Integer count = libraryUserManagementHandler.handleRequest(s3Event, CONTEXT);
         assertThat(count, is(0));
         assertThat(appender.getMessages(), containsString(
             HttpUrlConnectionAlmaUserUpserter.UNEXPECTED_RESPONSE_UPDATING_USER_LOG_MESSAGE_PREFIX));
+    }
+
+    @Test
+    public void shouldRedactSensitiveDataFromExceptionWhenAlmaCreateFail() throws IOException {
+        var bibNrToXmlMap = Collections.singletonMap(BIBNR_RESOLVABLE_TO_ALMA_CODE,
+                                                     IoUtils.stringFromResources(Path.of(BASEBIBLIOTEK_2062200_XML)));
+        var s3Event = HandlerTestUtils.prepareBaseBibliotekFromXml(bibNrToXmlMap, s3Driver);
+        WireMocker.mockAlmaGetResponseUserNotFound(LIB_2062200_ID);
+        WireMocker.mockAlmaPostResponseBadRequest();
+        var appender = LogUtils.getTestingAppender(HttpUrlConnectionAlmaUserUpserter.class);
+
+        libraryUserManagementHandler.handleRequest(s3Event, CONTEXT);
+
+        assertThat(appender.getMessages(), not(containsString("<password>***masked***</password>")));
+        assertThat(appender.getMessages(), containsString("<password>redacted</password>"));
+    }
+
+    @Test
+    public void shouldRedactSensitiveDataFromExceptionWhenAlmaUpdateFail() throws IOException {
+        var bibNrToXmlMap = Collections.singletonMap(BIBNR_RESOLVABLE_TO_ALMA_CODE,
+                                                     IoUtils.stringFromResources(Path.of(BASEBIBLIOTEK_2062200_XML)));
+        var s3Event = HandlerTestUtils.prepareBaseBibliotekFromXml(bibNrToXmlMap, s3Driver);
+        WireMocker.mockAlmaGetResponse(LIB_2062200_ID);
+        WireMocker.mockAlmaPutResponseBadRequest(LIB_2062200_ID);
+        var appender = LogUtils.getTestingAppender(HttpUrlConnectionAlmaUserUpserter.class);
+
+        libraryUserManagementHandler.handleRequest(s3Event, CONTEXT);
+
+        assertThat(appender.getMessages(), not(containsString("<password>***masked***</password>")));
+        assertThat(appender.getMessages(), containsString("<password>redacted</password>"));
     }
 
     @Test
@@ -399,13 +360,12 @@ class LibraryUserManagementHandlerTest {
         var reports3Driver = new S3Driver(s3Client, BASEBIBLIOTEK_REPORT);
         var report = reports3Driver.getFile(
             UnixPath.of(HandlerUtils.extractReportFilename(s3Event, LibraryUserManagementHandler.HANDLER_NAME)));
-        assertThat(report, startsWith(LIB_USER_PREFIX + bibNr + nva.commons.core.StringUtils.SPACE));
-        assertThat(report,
-                   endsWith(nva.commons.core.StringUtils.SPACE + LibraryUserManagementHandler.OK_REPORT_MESSAGE));
+
+        assertThat(report, containsString("lib1000000 \t ok:83 \t failures:0 \t failed:[]"));
     }
 
     @Test
-    void shouldGenerateReportWhenAlmaContactFailure() throws IOException {
+    void shouldGenerateReportWhenAlmaContactFailureWithListOfFailures() throws IOException {
         var bibNr = "1234567";
         var record = new RecordBuilder(BigInteger.ONE, LocalDate.now(), BaseBibliotekUtils.KATSYST_TIDEMANN)
                          .withBibnr(bibNr)
@@ -423,8 +383,15 @@ class LibraryUserManagementHandlerTest {
         var reports3Driver = new S3Driver(s3Client, BASEBIBLIOTEK_REPORT);
         var report = reports3Driver.getFile(
             UnixPath.of(HandlerUtils.extractReportFilename(s3Event, LibraryUserManagementHandler.HANDLER_NAME)));
-        assertThat(report, containsString(
-            bibNr + LibraryUserManagementHandler.COULD_NOT_CONTACT_ALMA_REPORT_MESSAGE));
+
+        assertThat(report, containsString(LIB_USER_PREFIX + bibNr));
+        assertThat(report, containsString("ok:0"));
+        assertThat(report, containsString("failures:83"));
+        assertThat(report, containsString("failed:["));
+        assertThat(report, containsString("NTNU"));
+        assertThat(report, containsString("MOLDESYK"));
+
+        assertThat(report, not(containsString("failed:[]")));
     }
 
     @Test
@@ -458,8 +425,62 @@ class LibraryUserManagementHandlerTest {
         var reports3Driver = new S3Driver(s3Client, BASEBIBLIOTEK_REPORT);
         var report = reports3Driver.getFile(
             UnixPath.of(HandlerUtils.extractReportFilename(s3Event, LibraryUserManagementHandler.HANDLER_NAME)));
-        assertThat(report, containsString(
-            bibNr + LibraryUserManagementHandler.COULD_NOT_CONVERT_TO_USER_REPORT_MESSAGE));
+
+        assertThat(report, containsString("failures:83"));
+        assertThat(report, startsWith(bibNr));
+        assertThat(report, containsString("Could not convert to user"));
+        assertThat(report, containsString("failed:["));
+        assertThat(report, containsString("NTNU"));
+        assertThat(report, containsString("MOLDESYK"));
+
+        assertThat(report, not(containsString("failed:[]")));
+    }
+
+    @Test
+    public void shouldHaveAllIdentifiersInAlmaPayload() throws IOException {
+        var withPaddr = true;
+        var withVaddr = true;
+        var specification = new RecordSpecification(BIBNR_RESOLVABLE_TO_ALMA_CODE,
+                                                    true,
+                                                    null,
+                                                    randomBoolean(),
+                                                    randomBoolean(),
+                                                    withPaddr,
+                                                    withVaddr,
+                                                    randomBoolean(),
+                                                    randomString());
+        var basebibliotekGenerator = new BasebibliotekGenerator(specification);
+        var basebibliotek = basebibliotekGenerator.generateBaseBibliotek();
+        var basebibliotekXml = BasebibliotekGenerator.toXml(basebibliotek);
+        WireMocker.mockBasebibliotekXml(basebibliotekXml, BIBNR_RESOLVABLE_TO_ALMA_CODE);
+        WireMocker.mockAlmaGetResponse(LIB_0030100_ID);
+        WireMocker.mockAlmaPutResponse(LIB_0030100_ID);
+        var uri = s3Driver.insertFile(HandlerTestUtils.randomS3Path(), BIBNR_RESOLVABLE_TO_ALMA_CODE);
+        var s3Event = HandlerTestUtils.createS3Event(uri);
+        libraryUserManagementHandler.handleRequest(s3Event, CONTEXT);
+        var requests = WireMocker.readAlmaPutRequests(LIB_0030100_ID);
+
+        requests.forEach(request -> assertThat(USER_IDENTIFIER_REALMS.stream()
+                                                   .allMatch(request.getBodyAsString()::contains),
+                                               equalTo(true)));
+    }
+
+    @Test
+    void shouldThrowCorrectExceptionWhenAlmaApiKeysCannotBeMapped() {
+        var invalidAlmaKeyMapping = "Hello";
+        var getSecretValueResponse = mock(GetSecretValueResponse.class);
+        var secretsManagerClient = mock(SecretsManagerClient.class);
+
+        when(getSecretValueResponse.secretString())
+            .thenReturn(invalidAlmaKeyMapping);
+        when(secretsManagerClient.getSecretValue(any(GetSecretValueRequest.class)))
+            .thenReturn(getSecretValueResponse);
+
+        almaKeysFetcher = new AlmaKeysFetcher(secretsManagerClient);
+
+        assertThrows(ErrorReadingSecretException.class, () -> new LibraryUserManagementHandler(s3Client,
+                                                                                               mockedEnvironment,
+                                                                                               almaKeysFetcher));
     }
 
     private S3Event prepareBaseBibliotekFromRecords(final UnixPath s3Path, final Record... records) throws IOException {
@@ -529,7 +550,7 @@ class LibraryUserManagementHandlerTest {
         assertThat(email, is(IsNull.notNullValue()));
         assertThat(email.getEmailTypes().getEmailType(), IsCollectionWithSize.hasSize(1));
         var expectedEmailType = ContactInfoConverter.WORK;
-        assertThat(email.getEmailTypes().getEmailType().get(0).getDesc(), is(equalTo(expectedEmailType)));
+        assertThat(email.getEmailTypes().getEmailType().getFirst().getDesc(), is(equalTo(expectedEmailType)));
         var expectedEmailAddress = Objects.nonNull(emailAddress) ? emailAddress : EMPTY_STRING;
         assertThat(email.getEmailAddress(), is(equalTo(expectedEmailAddress)));
         assertThat(email.isPreferred(), is(equalTo(shouldBePreferred)));
@@ -541,10 +562,10 @@ class LibraryUserManagementHandlerTest {
 
     private void assertPhone(Phones phones, Record record) {
         assertThat(phones.getPhone(), IsCollectionWithSize.hasSize(1));
-        var phone = phones.getPhone().get(0);
+        var phone = phones.getPhone().getFirst();
         assertThat(phone.isPreferred(), is(equalTo(true)));
         assertThat(phone.getPhoneTypes().getPhoneType(), IsCollectionWithSize.hasSize(1));
-        assertThat(phone.getPhoneTypes().getPhoneType().get(0).getDesc(), is(equalTo(ContactInfoConverter.OFFICE)));
+        assertThat(phone.getPhoneTypes().getPhoneType().getFirst().getDesc(), is(equalTo(ContactInfoConverter.OFFICE)));
         if (nva.commons.core.StringUtils.isEmpty(record.getTlf())) {
             assertThat(phone.getPhoneNumber(), is(equalTo(EMPTY_STRING)));
         } else {
@@ -598,7 +619,7 @@ class LibraryUserManagementHandlerTest {
         assertThat(address.getCountry().getValue(), is(equalTo(expectedCountry.toUpperCase(Locale.ROOT))));
         var expectedAddressType = ContactInfoConverter.WORK;
         assertThat(address.getAddressTypes().getAddressType(), IsCollectionWithSize.hasSize(1));
-        assertThat(address.getAddressTypes().getAddressType().get(0).getDesc(), is(equalTo(expectedAddressType)));
+        assertThat(address.getAddressTypes().getAddressType().getFirst().getDesc(), is(equalTo(expectedAddressType)));
     }
 
     private boolean hasLine1CorrespondingToRecord(Address address, String recordAddr) {
